# chat-app-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  test.txt  todo
client/: CMakeLists.txt
client/src/: chat_client_session.hpp  chat_session.hpp  chat_window.cpp  chat_window.h  chat_window.hpp  grpc_chat_client.cpp  grpc_chat_client.h  grpc_chat_client.hpp  main.cpp
client/src/database/: database_manager.hpp  database_manager_sqlite.cpp  database_manager_sqlite.hpp
client/src/service/: chat_client.hpp  chat_service_grpc.cpp  chat_service_grpc.hpp
client/src/ui/: chat_window.cpp  chat_window.hpp  client_list_helper.cpp  client_list_helper.hpp  login_view.cpp  login_view.hpp  main_window.cpp  main_window.hpp  private_chat_window.cpp  private_chat_window.hpp  stacked_widget_handler.cpp  stacked_widget_handler.hpp  style.css
client/src/ui/ban_list_view/: ban_list_view.cpp  ban_list_view.hpp  banned_users_model.cpp  banned_users_model.hpp
client/src/ui/enums/: server_connection_state.hpp
client/src/ui/res/: app.qrc
common/: CMakeLists.txt
common/proto/: chat.proto
server/: CMakeLists.txt
server/src/: database_manager.cpp  database_manager.hpp  database_manager_sqlitecpp.cpp  database_manager_sqlitecpp.hpp  main.cpp
server/src/database/: database_event_logger.hpp  database_manager.cpp  database_manager.hpp  database_manager_factory.hpp  database_manager_sqlite.cpp  database_manager_sqlite.hpp
server/src/domain/: chat_room.cpp  chat_room.hpp  client_event_broadcaster.cpp  client_event_broadcaster.hpp  client_registry.cpp  client_registry.hpp  message_broadcaster.cpp  message_broadcaster.hpp  private_message_broadcaster.cpp  private_message_broadcaster.hpp
server/src/grpc/: grpc_runner.cpp  grpc_runner.hpp
server/src/repository/: database_repository.hpp
server/src/service/: chat_service.cpp  chat_service.hpp  chat_service_impl.cpp  chat_service_impl.hpp
server/src/service/events/: chat_service_events.hpp  chat_service_events_dispatcher.hpp
server/src/service/validation/: message_validation_chain.hpp  message_validator.hpp  validation_types.hpp
server/src/service/validation/validators/: content_validator.hpp  rate_limit_validator.hpp
server/tests/: CMakeLists.txt
server/tests/database/: database_event_logger_test.cpp
server/tests/domain/: client_event_broadcaster_test.cpp  client_registry_test.cpp  message_broadcaster_test.cpp  private_message_broadcaster_test.cpp
server/tests/events/: event_dispatcher_test.cpp
server/tests/mock/: mock_database_manager.hpp  mock_service_event_observer.hpp
tools/: display_all_client_db_data.sh  init_server_db.sh
